--- a/VISCA_SonyEVID70/.classpath
+++ b/VISCA_SonyEVID70/.classpath
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="src" path="assets"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-18.0.1">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OpenCV">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -35,5 +32,6 @@
 	<classpathentry kind="lib" path="lib/jna-5.12.1.jar"/>
 	<classpathentry kind="lib" path="lib/jna-platform-5.12.1.jar"/>
 	<classpathentry kind="lib" path="/home/dan/git/opencv/build/bin/opencv-460.jar"/>
+	<classpathentry kind="lib" path="lib/opencv-460.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
