--- a/VISCA_SonyEVID70/.classpath
+++ b/VISCA_SonyEVID70/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="src" path="assets"/>
-	<classpathentry kind="src" path="ndisdk"/>
+	<classpathentry kind="src" path="ndi_native"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-18.0.1">
 		<attributes>
 			<attribute name="module" value="true"/>
